--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>My shelf</h1>
+
     <div id="shelf-container">
       <!-- Shelves will be dynamically added here -->
     </div>
