--- a/index.html
+++ b/index.html
@@ -7,23 +7,33 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>My shelf</h1>
+    <div class="container">
+      <header>
+        <h1>My shelf</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex officiis
+          dolores, dicta quae at modi in necessitatibus numquam dolor eveniet
+          consequatur nihil similique natus! Exercitationem iusto est cum atque
+          obcaecati.
+        </p>
+      </header>
 
-    <div id="shelf-container">
-      <!-- Shelves will be dynamically added here -->
-    </div>
-
-    <!-- Book detail modal -->
-    <div id="book-modal" class="modal">
-      <div class="modal-content">
-        <span class="close-button">&times;</span>
-        <h2 id="book-title"></h2>
-        <p id="book-category"></p>
-        <p id="book-description"></p>
+      <div id="shelf-container">
+        <!-- Shelves will be dynamically added here -->
       </div>
-    </div>
 
-    <button id="download-json">Download JSON</button>
+      <!-- Book detail modal -->
+      <div id="book-modal" class="modal">
+        <div class="modal-content">
+          <span class="close-button">&times;</span>
+          <h2 id="book-title"></h2>
+          <p id="book-category"></p>
+          <p id="book-description"></p>
+        </div>
+      </div>
+
+      <button id="download-json">Download JSON</button>
+    </div>
 
     <script src="script.js"></script>
   </body>
