--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
         <p>
           This website helps you keep track of the books you've read and
           organize them according to my styleguide. You can also download your
-          bookshelf as a JSON file. Please note that this can't retrieve the
-          spine images so it takes the most used color from the cover image and
-          uses that instead.
+          bookshelf as a JSON file.
         </p>
         <a href="my-bookshelf.html">See my bookshelf instead</a>
       </header>
@@ -23,16 +21,16 @@
       <div id="shelf-container">
         <div class="shelf">
           <div class="book-container">
-            <div class="book" data-isbn="9783161484100"></div>
-            <div class="book" data-isbn="9780439064873"></div>
-            <div class="book" data-isbn="9780747532743"></div>
+            <div class="book" data-isbn="" data-thickness=""></div>
+            <div class="book" data-isbn="" data-thickness=""></div>
+            <div class="book" data-isbn="" data-thickness=""></div>
           </div>
         </div>
         <div class="shelf">
           <div class="book-container">
-            <div class="book" data-isbn="9780307887894"></div>
-            <div class="book" data-isbn="9780307887894"></div>
-            <div class="book" data-isbn="9780307887894"></div>
+            <div class="book" data-isbn="" data-thickness=""></div>
+            <div class="book" data-isbn="" data-thickness=""></div>
+            <div class="book" data-isbn="" data-thickness=""></div>
           </div>
         </div>
       </div>
