license, organized the project, planned more features & other improvements

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Book Finder</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Personal book finder | Pontus Henriksson - 2024</title>
+    <meta
+      name="description"
+      content="A project designed to store data about the books I've read and manage their order on physical shelves, helping me find them easily and allowing you to to the same."
+    />
+    <meta name="author" content="Pontus Henriksson" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <div class="container">
@@ -26,16 +32,16 @@
       <div id="shelf-container">
         <div class="shelf">
           <div class="book-container">
-            <div class="book" data-isbn="9783161484100"></div>
-            <div class="book" data-isbn="978-1-5011-2174-6"></div>
-            <div class="book" data-isbn="9780747532743"></div>
+            <div class="book"></div>
+            <div class="book"></div>
+            <div class="book"></div>
           </div>
         </div>
         <div class="shelf">
           <div class="book-container">
-            <div class="book" data-isbn="9783161484100"></div>
-            <div class="book" data-isbn="invalidisbn"></div>
-            <div class="book" data-isbn="9780747532743"></div>
+            <div class="book"></div>
+            <div class="book"></div>
+            <div class="book"></div>
           </div>
         </div>
       </div>
@@ -45,6 +51,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vibrant.js/1.0.0/Vibrant.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
-    <script src="script.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
