Improved js and implemented my own shelf and more

--- a/index.html
+++ b/index.html
@@ -30,23 +30,10 @@
       </header>
 
       <div id="shelf-container">
-        <div class="shelf">
-          <div class="book-container">
-            <div class="book"></div>
-            <div class="book"></div>
-            <div class="book"></div>
-          </div>
-        </div>
-        <div class="shelf">
-          <div class="book-container">
-            <div class="book"></div>
-            <div class="book"></div>
-            <div class="book"></div>
-          </div>
-        </div>
+        <!-- Shelves will be rendered here dynamically -->
       </div>
 
-      <button id="download-json">Download updated JSON</button>
+      <button id="download-json">Download shelf as JSON</button>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vibrant.js/1.0.0/Vibrant.min.js"></script>
